<resources>
    <string name="app_name">MeteoInconnu</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_home">Liste d\'inconnu</string>
    <string name="title_dashboard">Ajouter</string>
    <string name="title_notifications">Météo</string>
    <string name="nom">Nom</string>
    <string name="prenom">Prenom</string>
    <string name="age">Age</string>
    <string name="ville">Ville</string>
    <string name="sexe">Sexe</string>
    <string name="titreMeteo">MÉTÉO UTILISATEUR</string>
    <string name="btnFinishAdd">Valider</string>
    <string-array name="sexe">
        <item>Homme</item>
        <item>Femme</item>
    </string-array>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="pays">pays</string>
    <string name="femme">femme</string>
    <string name="homme">homme</string>
</resources>
